Dec 27, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added 20sec timeout for wget
- support for Voyager Elite Force
- changed some internals for statistics
- removed 2 not working q3 masters
- added gameaholic lists for voyager and q3a
- renamed T/O -> Timeout
- added tribes2 statistics, only 25% servers are running linux :-(

Dec 23, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- default masterprotocol for q3 is now 67 (pr 1.31)

Dec 23, 2001: Jordi Mallach <jordi@sindominio.net>
- Spanish translation fixes

Dec 22,2001: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9a

Dec 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gametypes and dmflags for q3a mod generations

Dec 17, 2001: Jordi Mallach <jordi@sindominio.net>
- configure.in: remove debian/Makefile creation, too.
- Attempt to fix Gamespy pixmap.
- Updated NEWS for 0.9.8.

Dec 16, 2001: Jordi Mallach <jordi@sindominio.net>
- Makefile.am: remove debian from SUBDIRS. What a pain in the ass!
  The whole directory should be removed, but this is the bare minimum.

Dec 16, 2001: Jordi Mallach <jordi@sindominio.net>
- Updated Spanish translation.

Dec 15, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- server filters were broken, fixed
- new Tribes2 icon
- updated TODO
- updated german translation

Dec 15, 2001: Alex Burger <alex@fragit_dot_net>
- Added Edit / Add Default Masters command.  Adds in all the default
  master servers in case you accidentally deleted one (or all)

Dec 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- qstat no longer required at build time

Dec 09, 2001: Jordi Mallach <jordi@sindominio.net>
- Added past release dates to NEWS.

Dec 09, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- Updated NEWS and BUGS

Dec 07, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- Patch by Ben Winslow to create OS/CPU statistics for RTCW, Kingpin and
  Half-Life

Dec 06, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added rtcw gametypes